first step in prototype of Nudsf bases session storage

--- a/priv/dev.config
+++ b/priv/dev.config
@@ -4,9 +4,10 @@
 	 ]},
 
  {kernel,
-  [{logger,
+  [{logger_level, debug},
+   {logger,
     [{handler, default, logger_std_h,
-      #{level => info,
+      #{level => debug,
 	formatter =>
 	    {logger_formatter,
 	     #{single_line => true,
@@ -29,6 +30,7 @@
 	   {ip, {0,0,0,0}}
 	  ]},
 	 {node_id, <<"pgw">>},
+	 {udsf, [{handler, ergw_nudsf_mongo}]},
 	 {sockets,
 	  [{cp, [{type, 'gtp-u'},
 		 {ip, {127,0,0,1}},
