--- a/rebar.config
+++ b/rebar.config
@@ -9,12 +9,13 @@
 	{cowboy, "2.8.0"},
 	{prometheus, "4.6.0"},
 	{prometheus_cowboy, "0.1.8"},
+	{mongodb, {git, "git://github.com/comtihon/mongodb-erlang", {branch, "master"}}},
 	{erlando, {git, "https://github.com/travelping/erlando.git", {tag, "1.0.3"}}},
 	{netdata, {git, "https://github.com/RoadRunnr/erl_netdata.git", {ref, "cbd6eaf"}}},
 	{gtplib, {git, "https://github.com/travelping/gtplib.git", {branch, "master"}}},
 	{pfcplib, {git, "https://github.com/travelping/pfcplib.git", {branch, "master"}}},
-	{ergw_aaa, {git, "git://github.com/travelping/ergw_aaa", {tag, "3.6.2"}}},
-	{prometheus_diameter_collector, {git, "https://github.com/travelping/prometheus_diameter_collector.git", {tag, "1.0.1"}}}
+	{ergw_aaa, {git, "git://github.com/travelping/ergw_aaa", {branch, "feature/save-restore"}}},
+	{prometheus_diameter_collector, {git, "https://github.com/travelping/prometheus_diameter_collector.git", {branch, "master"}}}
 ]}.
 
 {minimum_otp_vsn, "22.3"}.
@@ -89,8 +90,8 @@
 %% xref checks to run
 {xref_checks, [locals_not_used, deprecated_function_calls,
 	       exports_not_used, deprecated_functions]}.
-{xref_queries,
- [{"(XC - UC) || (XU - X - B)", []}]}.
+
+{xref_ignores, [ergw_nudsf]}.
 
 {ct_opts, [
   % Specify that Common Test should name a new private directory for each
