--- a/priv/dev.config
+++ b/priv/dev.config
@@ -28,6 +28,7 @@
 	  [{port, 8080},
 	   {ip, {0,0,0,0}}
 	  ]},
+	 {node_id, <<"pgw">>},
 	 {sockets,
 	  [{cp, [{type, 'gtp-u'},
 		 {ip, {127,0,0,1}},
