--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
 	{cowboy, "2.8.0"},
 	{prometheus, "4.6.0"},
 	{prometheus_cowboy, "0.1.8"},
-	{erlando, {git, "https://github.com/travelping/erlando.git", {tag, "1.0.3"}}},
+	{erlando, {git, "https://github.com/travelping/erlando.git", {branch, "master"}}},
 	{netdata, {git, "https://github.com/RoadRunnr/erl_netdata.git", {ref, "cbd6eaf"}}},
 	{gtplib, {git, "https://github.com/travelping/gtplib.git", {branch, "master"}}},
 	{pfcplib, {git, "https://github.com/travelping/pfcplib.git", {branch, "master"}}},
